# aatest004

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
aaproto/: CMakeLists.txt  addressbook.proto  commandmessage.proto  responsemessage.proto
aaproto-c/: commandmessage.pb-c.c  commandmessage.pb-c.h  responsemessage.pb-c.c  responsemessage.pb-c.h
main/: CMakeLists.txt  Kconfig.projbuild  aamqtt.c  aamqtt.h  aamsg.c  aamsg.h  test001.c  test002.c  test003.c  test004.c
